# avspeechsynthesizer-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_utterance_builders.rs  02_framework_smoke.rs  03_voice_catalog.rs  04_buffer_callback.rs  05_marker_roundtrip.rs  06_provider_roundtrip.rs  07_personal_voice_status.rs  08_async_events.rs
src/: async_api.rs  buffer_callback.rs  error.rs  lib.rs  marker.rs  midi.rs  personal_voice.rs  private.rs  provider.rs
src/ffi/: buffer_callback.rs  core.rs  marker.rs  midi.rs  mod.rs  personal_voice.rs  provider.rs  synthesizer.rs  utterance.rs  voice.rs
src/synthesizer/: mod.rs
src/utterance/: mod.rs
src/voice/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/AVSpeechSynthesizerBridge/: AsyncStream.swift  BufferCallbacks.swift  Core.swift  MIDI.swift  Markers.swift  Offline.swift  PersonalVoice.swift  Provider.swift  Synthesizer.swift  Utterances.swift  Voices.swift
swift-bridge/Sources/AVSpeechSynthesizerBridge/include/: AVSpeechSynthesizerBridge.h  module.modulemap
tests/: api_coverage.rs  async_stream_tests.rs  buffer_callback_tests.rs  marker_tests.rs  midi_tests.rs  personal_voice_tests.rs  provider_tests.rs  synthesizer_tests.rs  utterance_tests.rs  voice_tests.rs
