[package]
name = "avspeechsynthesizer-rs"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/avspeechsynthesizer-rs"
repository = "https://github.com/doom-fish/avspeechsynthesizer-rs"
description = "Safe Rust bindings for AVSpeechSynthesizer — Apple's text-to-speech APIs on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["tts", "speech", "macos", "avfoundation", "apple"]
categories = ["api-bindings", "os::macos-apis", "multimedia::audio"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "avspeechsynthesizer"
crate-type = ["lib"]

[features]
default = []
async = ["doom-fish-utils"]

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
doom-fish-utils = { path = "../doom-fish-utils", version = "0.1", optional = true }

[dev-dependencies]
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "02_framework_smoke"

[profile.release]
debug = "full"
strip = "none"
